--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,8 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#712cf9",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "scope_extensions": [
+    {"type" : "origin", "origin" : "https://weetech.ch"}
+  ]
 }
