--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
       "@emotion/react": "^11.10.6",
       "@emotion/styled": "^11.10.6",
       "@fontsource/roboto": "^4.5.8",
-      "@mui/icons-material": "^5.11.11",
-      "@mui/material": "^5.11.12",
-      "@mui/x-data-grid": "^6.0.0",
+      "@mui/icons-material": "^5.18.0",
+      "@mui/material": "^5.18.0",
+      "@mui/x-data-grid": "^6.20.4",
       "@testing-library/jest-dom": "^5.16.5",
       "@testing-library/react": "^13.4.0",
       "@testing-library/user-event": "^13.5.0",
@@ -32,10 +32,17 @@
       "deploy": "gh-pages -d build"
    },
    "eslintConfig": {
-      "extends": ["react-app", "react-app/jest"]
+      "extends": [
+         "react-app",
+         "react-app/jest"
+      ]
    },
    "browserslist": {
-      "production": [">0.2%", "not dead", "not op_mini all"],
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
       "development": [
          "last 1 chrome version",
          "last 1 firefox version",
